fix: Nav Out of Bounds Change nav height to 100% to keep it within bounds during vertical resize

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,7 +101,7 @@ body {
 .locationList {
     list-style: none;
     width: 100%;
-    height: 800px;
+    height: 100%;
     padding-right: 20px;
     overflow: auto;
     position: relative;
